--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,7 @@ language: node_js
 node_js:
   - 0.6
   - 0.7 # development version of 0.8, may be unstable
+
+notifications:
+  email:
+    - matt@bornski.com
