--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "time"
   ],
   "dependencies": {
-    "geolib": "git://github.com/mattbornski/Geolib.git",
+    "geolib": "git://github.com/manuelbieh/Geolib.git",
     "simplesets": "1.2.0",
     "time": "0.8.0"
   },
