--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "author": "mattbornski",
   "contributors": [
-    "Alan Gutierrez <alan@prettyrobots.com> (http://github.com/bigeasy)"
+    "Alan Gutierrez <alan@prettyrobots.com> (http://github.com/bigeasy)",
+    "Philipp Fehre <philipp.fehre@googlemail.com> (http://github.com/sideshowcoder)"
   ],
   "name": "tzwhere",
   "description": "Determine timezone from lat/long",
-  "version": "0.0.9",
+  "version": "1.0.0",
   "main": "lib/index.js",
   "directories" : {
     "lib": "lib",
@@ -29,9 +30,9 @@
     "node": ">= 0.6"
   },
   "dependencies": {
-    "geolib": "git://github.com/manuelbieh/Geolib.git",
+    "geolib": "1.2.5",
     "simplesets": "1.2.0",
-    "timezone": "0.0.16"
+    "timezone": "0.0.19"
   },
   "devDependencies": {
     "mocha": "1.x"
