Updates: 1.Update reference to 'timezone' library to match most recent minor version, to fix the hanging initialization problem 2. Update reference to 'geolib' to match most recent minor version 3.	Add ability to create regional GEO JSON shape file from included world GEO JSON shape file, this allows us to take better advantage of initializing the library with an optimized GEO JSON shape file. 4	Cache shortcuts: optimize initialization by caching shortcuts (in 'lib/current_world.json') after they are created from the GEO JSON shape file, when loading the same shape file we skip over the construction of the shortcuts and load the cached shortcuts.  One caveat is if the GEO JSON shape file is updated this caching mechanism will not see that, therefore the GEO JSON shape file will need to be deleted when the GEO JSON shape file has been updated. 5. Added grunt, grunt-test and grunt-watch dev dependencies to automate testing while coding. 6. Added blanket dev dependency to provide coverage reports while coding.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "description": "Determine timezone from lat/long",
   "version": "1.0.0",
   "main": "lib/index.js",
-  "directories" : {
+  "directories": {
     "lib": "lib",
     "test": "test"
   },
@@ -30,14 +30,20 @@
     "node": ">= 0.6"
   },
   "dependencies": {
-    "geolib": "1.2.5",
+    "geolib": "~1.2.5",
     "simplesets": "1.2.0",
-    "timezone": "0.0.19"
+    "timezone": "~0.0.19"
   },
   "devDependencies": {
-    "mocha": "1.x"
+    "blanket": "^1.1.6",
+    "grunt": "^0.4.5",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-mocha-test": "^0.11.0",
+    "load-grunt-tasks": "^0.6.0",
+    "mocha": "^1.21.4",
+    "time-grunt": "^0.4.0"
   },
   "scripts": {
-    "test": "for i in `ls test/*.js`; do mocha $i; done"
+    "test": "grunt test"
   }
 }
