Updates for code review: 1.Update reference to 'timezone' library to match most recent major version, 2. Update reference to 'geolib' to match most recent major version

--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "node": ">= 0.6"
   },
   "dependencies": {
-    "geolib": "~1.2.5",
+    "geolib": "^1.2.5",
     "simplesets": "1.2.0",
-    "timezone": "~0.0.19"
+    "timezone": "~0.0.*"
   },
   "devDependencies": {
     "blanket": "^1.1.6",
