--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "node": ">= 0.6"
   },
   "dependencies": {
-    "geolib": "^1.2.5",
+    "geolib": "~1.*",
     "simplesets": "1.2.0",
     "timezone": "~0.0.*"
   },
