--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "time-grunt": "^0.4.0"
   },
   "scripts": {
+    "pretest": "npm i grunt",
     "test": "./node_modules/.bin/grunt test"
   }
 }
