--- a/package.json
+++ b/package.json
@@ -30,13 +30,13 @@
     "node": ">= 0.6"
   },
   "dependencies": {
-    "geolib": "~1.*",
+    "geolib": "1.x",
     "simplesets": "1.2.0",
-    "timezone": "~0.0.*"
+    "timezone": "0.x"
   },
   "devDependencies": {
     "blanket": "^1.1.6",
-    "grunt": "^0.4.5",
+    "grunt": "0.4.xgit ",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-mocha-test": "^0.11.0",
