--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   ],
   "name": "tzwhere",
   "description": "Determine timezone from lat/long",
-  "version": "1.0.0-beta.1",
+  "version": "1.0.2",
   "main": "lib/index.js",
   "directories" : {
     "lib": "lib",
